added login username text input

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,7 +14,12 @@
 
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item>
+      <ion-label color="primary" floating>Username</ion-label>
+      <ion-input [(ngModel)]="user"></ion-input>
+    </ion-item>
+  </ion-list>
 </ion-content>
 
 <ion-footer>
