password form input

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -19,6 +19,11 @@
       <ion-label color="primary" floating>Username</ion-label>
       <ion-input [(ngModel)]="user"></ion-input>
     </ion-item>
+
+    <ion-item>
+      <ion-label color="primary" floating>Password</ion-label>
+      <ion-input [(ngModel)]="pass"></ion-input>
+    </ion-item>
   </ion-list>
 </ion-content>
 
