make password input a type password

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -22,7 +22,7 @@
 
     <ion-item>
       <ion-label color="primary" floating>Password</ion-label>
-      <ion-input [(ngModel)]="pass"></ion-input>
+      <ion-input type="password" [(ngModel)]="pass"></ion-input>
     </ion-item>
   </ion-list>
 </ion-content>
