--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -28,5 +28,5 @@
 </ion-content>
 
 <ion-footer>
-  <button type="submit" [disabled]="user.length === 0 || pass.length === 0" color="primary" ion-button full large>Submit</button>
+  <button type="submit" (click)="submit()" [disabled]="user.length === 0 || pass.length === 0" color="primary" ion-button full large>Submit</button>
 </ion-footer>
