test out email functionality

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -20,6 +20,7 @@
       <ion-input [(ngModel)]="user"></ion-input>
     </ion-item>
 
+    <button type="button" (click)="email()" color="primary" ion-button outline>email</button>
     <ion-item>
       <ion-label color="primary" floating>Password</ion-label>
       <ion-input type="password" [(ngModel)]="pass"></ion-input>
