added uberlogin to modules

--- a/src/pages/uber-login/uber-login.html
+++ b/src/pages/uber-login/uber-login.html
@@ -1,13 +1,7 @@
-<!--
-  Generated template for the UberLoginPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>UberLogin</ion-title>
+    <ion-title>Cookie plz...</ion-title>
   </ion-navbar>
 
 </ion-header>
