--- a/src/pages/uber-login/uber-login.html
+++ b/src/pages/uber-login/uber-login.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Cookie plz...</ion-title>
   </ion-navbar>
 
@@ -8,5 +8,16 @@
 
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item>
+      <ion-label floating>Cookie</ion-label>
+      <ion-input [(ngModel)]="cookie"></ion-input>
+    </ion-item>
+  </ion-list>
 </ion-content>
+
+<ion-footer>
+  <ion-navbar color="primary">
+    <button (click)="click()" type="submit" [disabled]="cookie.length === 0" ion-button large full>Submit</button>
+  </ion-navbar>
+</ion-footer>
