--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBN__TGV0kdA7nwr1Nimjqi8XyqIPmF7zA" type="text/javascript"></script>
+  <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
 
