--- a/src/pages/uber-map/uber-map.html
+++ b/src/pages/uber-map/uber-map.html
@@ -1,3 +1,6 @@
 <ion-content>
   <div #map id="map"></div>
+  <ion-fab bottom left>
+    <button (click)="toggleMarkers()" ion-fab><ion-icon name="add"></ion-icon></button>
+  </ion-fab>
 </ion-content>
